# rust_telegram_sol

./: .gitignore  Cargo.toml  README.md
src/: main.rs
